<resources>
    <string name="app_name">Network</string>
    <string name="create_your_account">Create Your Account:</string>
    <string name="user_name">User Name</string>
    <string name="user_id">User Id</string>
    <string name="college_name">College Name</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
</resources>
